<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Search Bar and Filter Button -->
    <LinearLayout
        android:id="@+id/searchBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search"
            android:autofillHints="search"
            android:inputType="text" />

        <Button
            android:id="@+id/filterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter" />
    </LinearLayout>

    <!-- Filter Options -->
    <LinearLayout
        android:id="@+id/filterOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchBarLayout">

        <Spinner
            android:id="@+id/genreSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/platformPS4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ps_4" />

        <CheckBox
            android:id="@+id/platformXboxOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xbox_one" />

        <CheckBox
            android:id="@+id/platformPC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pc" />

        <TextView
            android:id="@+id/priceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_price_100" />

        <SeekBar
            android:id="@+id/priceSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="100" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterOptions" />

</androidx.constraintlayout.widget.ConstraintLayout>
