<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Other views for additional game data -->
    <TextView
        android:id="@+id/gameGenre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameGenre"
        app:layout_constraintTop_toBottomOf="@id/gameName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/gamePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gamePrice"
        app:layout_constraintTop_toBottomOf="@id/gameGenre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/gamePlatforms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gamePlatforms"
        app:layout_constraintTop_toBottomOf="@id/gamePrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:textSize="16sp" />

</androidx.constraintlayout.widget.ConstraintLayout>
